# fluxy-mpi-bgc

./: .gitattributes  .gitignore  LICENSE.txt  PARIS_annex_plot_generator.ipynb  PARIS_inversion_results.ipynb  PARIS_inversion_results.py  README.md  annex_plot_generator.ipynb  annex_plot_generator.py  models_info.json  pyproject.toml  species_info.json
.github/workflows/: pytest.yml  python-app-mpi-bgc.yml  python-app.yml
Git Workflow/: Git Workflow for Fluxy.md
configs/: EUROPE_cell_area.nc  SOUTHAUSTRALIA_cell_area.nc  models_info.json  regions_info.json  sectors.yml  site_info.json  species_info.json
data/templates/: PAR-AVE-EYE_baseline_timestamps.cdl  PAR-AVE-EYE_cell_area.cdl  PAR-AVE-EYE_inventory.cdl  PAR-AVE-EYE_sector_flux.cdl  PAR-AVE-EYE_sector_proportions.cdl  README_templates.md  ec_flux.cdl
data/tests/configs/: EUROPE_cell_area.nc
data/tests/sector_flux/: EUROPE_EDGAR_ch4_yearly_flux_sectors.nc
fluxy/: PARIS_inversion_results.py  config.py  io.py  types.py
fluxy/cli/: annex_plot_generator.ipynb  annex_plot_generator.py  config_annex_plot.py  config_annex_plot_2025.py  filenames.json  utils_annex_plot.py
fluxy/operators/: convert.py  ecflux.py  flux.py  flux_align_dataset.py  flux_combine.py  flux_map_diff.py  flux_map_resample.py  flux_prepare_inventory.py  flux_prepare_map_data.py  flux_resample.py  flux_scale_by_sector_proportions.py  flux_timeseries_resample.py  mf.py  regions.py  rolling_mean.py  sectors.py  select.py  stats.py  uncertainty.py  utils.py
fluxy/plots/: correlation.py  flux_map.py  flux_timeseries.py  mf_stats.py  mf_timeseries.py  stats.py  utils.py
fluxy/plots/ec_flux/: sectorial_stack.py
fluxy/test_utils/: __init__.py  models.py
mpi-bgc-intern/scripts/: PARIS_inversion_results.ipynb  csr_preprocess.ipynb  mpi_bgc_PARIS_inversion_results.ipynb
mpi-bgc-intern/utils/: csr_preprocessor.py
mpi_bgc_intern/scripts/: csr_preprocess.ipynb  mpi_bgc_PARIS_inversion_results.ipynb
mpi_bgc_intern/tests/: test_csr_preprocessor.py
mpi_bgc_intern/tests/data/: Posterior_vprm_flux_monthly_2021.nc  Prior_vprm_flux_monthly_2021.nc
mpi_bgc_intern/utils/: csr_preprocessor.py
scripts/: PARIS_inversion_results.ipynb  example_basics.ipynb  example_ecflux.ipynb  icoscities_ecflux_hardau.ipynb  mpi_bgc_itms_inversion_results.ipynb  reduce_size.py  taylor_plot.ipynb
scripts/preprocessing/: README.md  csr_preprocess.ipynb  csr_preprocessor.py  csr_preprocessor_concentration.py  eddypro.ipynb
scripts/preprocessing/csr/: csr_preprocess.ipynb  csr_preprocessor.py  (+1 more)
tests/: test_annex.py  test_config.py  test_flux_map_resample.py  test_flux_scale_by_sector_proportions.py  test_io.py  test_operators.py  test_plots.py  test_scale.py
tests/ecflux/: test_ecflux_io.py  test_ecflux_operators.py
tests/utils/: test_region.py
(+15 files in other folders)
