[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxy"
version = "v2.0"
dependencies = [
  "matplotlib",
  "xarray",
  "netcdf4",
  "geopandas",
]
requires-python = ">=3.8"
authors = [
  {name = "Alexandre Danjou", email = "alexandre.danjou@bristol.ac.uk"},
  {name = "Alice Ramsden", email = "alice.ramsden@metoffice.gov.uk"},
  {name = "Daniela Brito Melo", email = "daniela.britomelo@empa.ch"},
  {name = "Hélène De Longueville", email = "helene.delongueville@bristol.ac.uk"},
  {name = "Lionel Constantin", email = "lionel.constantin@empa.ch"},
]
maintainers = [
  {name = "Alexandre Danjou", email = "alexandre.danjou@bristol.ac.uk"},
  {name = "Alice Ramsden", email = "alice.ramsden@metoffice.gov.uk"},
  {name = "Daniela Brito Melo", email = "daniela.britomelo@empa.ch"},
  {name = "Hélène De Longueville", email = "helene.delongueville@bristol.ac.uk"},
]
description = "PARIS inverse modelling intercomparison tool"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["inverse modelling", "greenhouse gases", "emission fluxes", "mole fractions"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]


[project.urls]
Homepage = "https://horizoneurope-paris.eu/"
Documentation = "https://github.com/ACRG-Bristol/PARIS_intercomparison/blob/devel/README.md"
Repository = "https://github.com/ACRG-Bristol/PARIS_intercomparison"
"Bug Tracker" = "https://github.com/ACRG-Bristol/PARIS_intercomparison/issues"
